<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:baselineAligned="false"
    android:paddingStart="15dp"
    android:paddingTop="5dp"
    android:paddingEnd="15dp"
    android:paddingBottom="7dp">

    <LinearLayout
        android:id="@+id/bt_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/ic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_lines"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt_compete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/ic_compete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_compete"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_compete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/ic_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_explore"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/ic_feedback"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_feedback"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback" />

    </LinearLayout>

</LinearLayout>

